ADD_EXECUTABLE(example_net_tcpserver TcpServer.cxx)
TARGET_LINK_LIBRARIES(example_net_tcpserver moon)

ADD_EXECUTABLE(example_net_server ServerTest.cxx)
TARGET_LINK_LIBRARIES(example_net_server moon)

ADD_EXECUTABLE(example_net_server1 Server1Test.cxx)
TARGET_LINK_LIBRARIES(example_net_server1 moon)

